third_party/move/move-compiler-v2/tests/more-v1/parser/address_just_too_long_exp.exp

Diagnostics:
error: invalid address
  ┌─ tests/more-v1/parser/address_just_too_long_exp.move:4:18
  │
4 │         let x = @0x10000000000000000000000000000000000000000000000000000000000000000;
  │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 32 bytes
